Bug 1324116 - Baldr: add WebAssembly.LinkError and throw it for errors during instantiation (r=bbouvier)

MozReview-Commit-ID: 21dA8fAgBdA