js/src/jit-test/tests/wasm/jsapi.js
@@ -17,26 +17,35 @@ assertEq(wasmDesc.configurable, true);
 assertEq(WebAssembly, wasmDesc.value);
 assertEq(String(WebAssembly), "[object WebAssembly]");
 
-// 'WebAssembly.(Compile|Runtime)Error' data property
+// 'WebAssembly.(Compile|Link|Runtime)Error' data property
 const compileErrorDesc = Object.getOwnPropertyDescriptor(WebAssembly, 'CompileError');
+const linkErrorDesc = Object.getOwnPropertyDescriptor(WebAssembly, 'LinkError');
 const runtimeErrorDesc = Object.getOwnPropertyDescriptor(WebAssembly, 'RuntimeError');
 assertEq(typeof compileErrorDesc.value, "function");
+assertEq(typeof linkErrorDesc.value, "function");
 assertEq(typeof runtimeErrorDesc.value, "function");
 assertEq(compileErrorDesc.writable, true);
+assertEq(linkErrorDesc.writable, true);
 assertEq(runtimeErrorDesc.writable, true);
 assertEq(compileErrorDesc.enumerable, false);
+assertEq(linkErrorDesc.enumerable, false);
 assertEq(runtimeErrorDesc.enumerable, false);
 assertEq(compileErrorDesc.configurable, true);
+assertEq(linkErrorDesc.configurable, true);
 assertEq(runtimeErrorDesc.configurable, true);
 
 // 'WebAssembly.(Compile|Runtime)Error' constructor function
 const CompileError = WebAssembly.CompileError;
+const LinkError = WebAssembly.LinkError;
 const RuntimeError = WebAssembly.RuntimeError;
 assertEq(CompileError, compileErrorDesc.value);
+assertEq(LinkError, linkErrorDesc.value);
 assertEq(RuntimeError, runtimeErrorDesc.value);
 assertEq(CompileError.length, 1);
+assertEq(LinkError.length, 1);
 assertEq(RuntimeError.length, 1);
 assertEq(CompileError.name, "CompileError");
+assertEq(LinkError.name, "LinkError");
 assertEq(RuntimeError.name, "RuntimeError");
 
 // 'WebAssembly.(Compile|Runtime)Error' instance objects
